--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ native/src/seal/util/config.h
 native/src/gsl/
 !dotnet/nuget/*.nuspec.in
 dotnet/nuget/*.nuspec
+!dotnet/tests/SEALNetTest.csproj.in
+dotnet/tests/SEALNetTest.csproj
+!dotnet/examples/SEALNetExamples.csproj.in
+dotnet/examples/SEALNetExamples.csproj
 dotnet/nuget/SEALNet.targets
 CMakeSettings.json
 
