--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -39,9 +39,16 @@ steps:
 - task: CopyFiles@2
   displayName: Copy files to staging directory
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)\lib'
-    Contents: '**/libsealc.so'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)\lib'
+    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\arm64-v8a\lib'
+    Contents: 'libsealc.so'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\arm64-v8a'
+
+- task: CopyFiles@2
+  displayName: Copy files to staging directory
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\x86_64\lib'
+    Contents: 'libsealc.so'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\x86_64'
 
 - task: PublishBuildArtifacts@1
   displayName: Publish build artifacts
