--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,11 +298,12 @@ endif()
 # Add source files to library and header files to install
 set(SEAL_SOURCE_FILES "")
 add_subdirectory(native/src/seal)
+
 # Create the config file
 configure_file(${CMAKE_CURRENT_LIST_DIR}/native/src/seal/util/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/native/src/seal/util/config.h)
 install(
     FILES
-        ${CMAKE_CURRENT_BINARY_DIR}/seal/util/config.h
+        ${CMAKE_CURRENT_BINARY_DIR}/native/src/seal/util/config.h
     DESTINATION
         ${SEAL_INCLUDES_INSTALL_DIR}/seal/util)
 
@@ -578,4 +579,3 @@ elseif(UNIX AND NOT APPLE)
 elseif(APPLE)
     set(SEAL_MACOS_SEAL_C_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libsealc.dylib)
 endif()
-
