--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -39,14 +39,14 @@ steps:
 - task: CopyFiles@2
   displayName: Copy files to staging directory
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\arm64-v8a\lib'
+    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\arm64-v8a\lib\arm64-v8a'
     Contents: 'libsealc.so'
     TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\arm64-v8a'
 
 - task: CopyFiles@2
   displayName: Copy files to staging directory
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\x86_64\lib'
+    SourceFolder: '$(Build.SourcesDirectory)\android\app\.cxx\cmake\release\x86_64\lib\x86_64'
     Contents: 'libsealc.so'
     TargetFolder: '$(Build.ArtifactStagingDirectory)\lib\x86_64'
 
