--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -45,7 +45,7 @@ steps:
 - task: CMake@1
   displayName: 'Configure SEAL'
   inputs:
-    cmakeArgs: .. -DCMAKE_BUILD_TYPE='Debug' -DSEAL_BUILD_DEPS=ON -DSEAL_BUILD_TESTS=ON -DSEAL_BUILD_EXAMPLES=ON -DSEAL_BUILD_SEAL_C=ON
+    cmakeArgs: .. -DCMAKE_BUILD_TYPE='${{ parameters.configuration }}' -DSEAL_BUILD_DEPS=ON -DSEAL_BUILD_TESTS=ON -DSEAL_BUILD_EXAMPLES=ON -DSEAL_BUILD_SEAL_C=ON
     workingDirectory: '$(Build.SourcesDirectory)/build'
 
 - task: MSBuild@1
@@ -230,7 +230,7 @@ steps:
     displayName: 'ESRP CodeSigning native'
     inputs:
       ConnectedServiceName: 'ESRP CodeSigning'
-      FolderPath: bin/${{ parameters.configuration }}
+      FolderPath: build/bin/${{ parameters.configuration }}
       Pattern: '*.dll'
       signConfigType: inlineSignParams
       inlineOperation: |
