--- a/cmake/SEALConfig.cmake.in
+++ b/cmake/SEALConfig.cmake.in
@@ -106,16 +106,16 @@ if(SEAL_FOUND)
     if(SEAL_DEBUG AND NOT SEAL_FIND_QUIETLY)
         message(STATUS "Performance warning: Microsoft SEAL compiled in debug mode")
     endif()
-    set(SEAL_TARGETS_AVAILABLE "Microsoft SEAL -> Targets available: SEAL::seal")
+    set(SEAL_TARGETS_AVAILABLE "Microsoft SEAL -> Targets available:")
 
     if(SEAL_STATIC_FOUND)
-        string(APPEND SEAL_TARGETS_AVAILABLE ", SEAL::seal")
+        string(APPEND SEAL_TARGETS_AVAILABLE " SEAL::seal")
     endif()
     if(SEAL_SHARED_FOUND)
-        string(APPEND SEAL_TARGETS_AVAILABLE ", SEAL::seal_shared")
+        string(APPEND SEAL_TARGETS_AVAILABLE " SEAL::seal_shared")
     endif()
     if(SEAL_C_FOUND)
-        string(APPEND SEAL_TARGETS_AVAILABLE ", SEAL::sealc")
+        string(APPEND SEAL_TARGETS_AVAILABLE " SEAL::sealc")
     endif()
     if(NOT SEAL_FIND_QUIETLY)
         message(STATUS ${SEAL_TARGETS_AVAILABLE})
