Revised cmake for examples and tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,13 +146,13 @@ set(SEAL_USE_ZSTD_OPTION_STR "Use Zstandard for compressed serialization")
 option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
 if(SEAL_USE_ZSTD)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Download ZSTD ...")
+        message(STATUS "Download Zstandard ...")
         include(ExternalZSTD)
         set(zstd_static "libzstd_static")
     else()
         find_package(zstd CONFIG)
         if(NOT zstd_FOUND)
-            message(FATAL_ERROR "Failed to find ZSTD")
+            message(FATAL_ERROR "Failed to find Zstandard")
         endif()
         if(TARGET zstd::libzstd_static)
             set(zstd_static "zstd::libzstd_static")
@@ -161,7 +161,7 @@ if(SEAL_USE_ZSTD)
             if(libzstd_type STREQUAL "STATIC")
                 set(zstd_static "libzstd")
             else()
-                message(FATAL_ERROR "ZSTD must be static")
+                message(FATAL_ERROR "Zstandard must be static")
             endif()
         endif()
     endif()
