--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,12 +114,12 @@ set(SEAL_USE_MSGSL_OPTION_STR "Use Microsoft GSL")
 option(SEAL_USE_MSGSL ${SEAL_USE_MSGSL_OPTION_STR} ON)
 if(SEAL_USE_MSGSL)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Download Microsoft.GSL ...")
+        message(STATUS "Download Microsoft GSL ...")
         include(ExternalMSGSL)
     else()
         find_package(Microsoft.GSL CONFIG)
         if(NOT Microsoft.GSL_FOUND)
-            message(FATAL_ERROR "Failed to find Microsoft.GSL.")
+            message(FATAL_ERROR "Failed to find Microsoft GSL")
         endif()
     endif()
 endif()
