--- a/dotnet/src/SEALNet.csproj.in
+++ b/dotnet/src/SEALNet.csproj.in
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -11,14 +11,14 @@
     <DelaySign Condition="'$(OS)' == 'Windows_NT' And '$(SEALNetSigningCertificate)' != ''">true</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
-    <DocumentationFile>$(ProjectDir)..\..\lib\dotnet\$(Configuration)/SEALNet.xml</DocumentationFile>
+    <DocumentationFile>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\$(Configuration)/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>$(ProjectDir)..\..\lib\dotnet\$(Configuration)</OutputPath>
+    <OutputPath>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(BuildIOS)' != ''">
     <DefineConstants>$(DefineConstants);SEAL_IOS</DefineConstants>
-    <DocumentationFile>$(ProjectDir)..\..\lib\dotnet\ios\$(Configuration)\SEALNet.xml</DocumentationFile>
-    <OutputPath>$(ProjectDir)..\..\lib\dotnet\ios\$(Configuration)</OutputPath>
+    <DocumentationFile>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\ios\$(Configuration)\SEALNet.xml</DocumentationFile>
+    <OutputPath>@CMAKE_RUNTIME_OUTPUT_DIRECTORY@\dotnet\ios\$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>pdbonly</DebugType>
