Added Microsoft.GSL requirement 3+, ZLIB requirement 1.2.11+, Zstandard does not carry version info. Edited messaging format when dependencies are found or not found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,12 +114,14 @@ set(SEAL_USE_MSGSL_OPTION_STR "Use Microsoft GSL")
 option(SEAL_USE_MSGSL ${SEAL_USE_MSGSL_OPTION_STR} ON)
 if(SEAL_USE_MSGSL)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Download Microsoft GSL ...")
+        message(STATUS "Microsoft GSL: download ...")
         include(ExternalMSGSL)
     else()
-        find_package(Microsoft.GSL CONFIG)
+        find_package(Microsoft.GSL 3 CONFIG)
         if(NOT Microsoft.GSL_FOUND)
-            message(FATAL_ERROR "Failed to find Microsoft GSL")
+            message(FATAL_ERROR "Microsoft GSL: not found")
+        else()
+            message(STATUS "Microsoft GSL: found")
         endif()
     endif()
 endif()
@@ -129,13 +131,15 @@ set(SEAL_USE_ZLIB_OPTION_STR "Use ZLIB for compressed serialization")
 option(SEAL_USE_ZLIB ${SEAL_USE_ZLIB_OPTION_STR} ON)
 if(SEAL_USE_ZLIB)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Download ZLIB ...")
+        message(STATUS "ZLIB: download ...")
         include(ExternalZLIB)
         set(zlib "zlibstatic")
     else()
         find_package(ZLIB 1.2.11)
         if(NOT ZLIB_FOUND)
-            message(FATAL_ERROR "Failed to find ZLIB")
+            message(FATAL_ERROR "ZLIB: not found")
+        else()
+            message(STATUS "ZLIB: found")
         endif()
         set(zlib "ZLIB::ZLIB")
     endif()
@@ -146,22 +150,23 @@ set(SEAL_USE_ZSTD_OPTION_STR "Use Zstandard for compressed serialization")
 option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
 if(SEAL_USE_ZSTD)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Download Zstandard ...")
+        message(STATUS "Zstandard: download ...")
         include(ExternalZSTD)
         set(zstd_static "libzstd_static")
     else()
         find_package(zstd CONFIG)
         if(NOT zstd_FOUND)
-            message(FATAL_ERROR "Failed to find Zstandard")
+            message(FATAL_ERROR "Zstandard: not found")
         endif()
         if(TARGET zstd::libzstd_static)
             set(zstd_static "zstd::libzstd_static")
         elseif(TARGET libzstd)
             get_target_property(libzstd_type libzstd TYPE)
-            if(libzstd_type STREQUAL "STATIC")
+            if(libzstd_type STREQUAL "STATIC_LIBRARY")
                 set(zstd_static "libzstd")
+                message(STATUS "Zstandard: found")
             else()
-                message(FATAL_ERROR "Zstandard must be static")
+                message(FATAL_ERROR "Zstandard: must be static")
             endif()
         endif()
     endif()
