--- a/native/tests/CMakeLists.txt
+++ b/native/tests/CMakeLists.txt
@@ -35,13 +35,15 @@ if(SEAL_BUILD_TESTS)
         mark_as_advanced(FETCHCONTENT_FULLY_DISCONNECTED)
         mark_as_advanced(FETCHCONTENT_UPDATES_DISCONNECTED)
         mark_as_advanced(FETCHCONTENT_QUIET)
-        message(STATUS "Download GoogleTest ...")
+        message(STATUS "GoogleTest: download ...")
         include(ExternalGTest)
         add_library(GTest::gtest ALIAS gtest)
     else()
         find_package(GTest 1.10.0 CONFIG)
         if(NOT GTest_FOUND)
-            message(FATAL_ERROR "Failed to find GoogleTest")
+            message(FATAL_ERROR "GoogleTest: not found")
+        else()
+            message(STATUS "GoogleTest: found")
         endif()
     endif()
 
