--- a/pkgconfig/seal_shared.pc.in
+++ b/pkgconfig/seal_shared.pc.in
@@ -14,4 +14,4 @@ Requires: @SEAL_PKGCONFIG_ZLIB_REQUIRES_STRING@
 Requires: @SEAL_PKGCONFIG_ZSTD_REQUIRES_STRING@
 
 Libs: -L${libdir} -lseal
-Cflags: -I${includedir}
+Cflags: @SEAL_LANG_FLAG@ -I${includedir}
