Fixes to FetchContent system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,12 +113,11 @@ include(CleanArtifacts)
 
 # [option] SEAL_BUILD_DEPS (default: ON)
 # Download and build missing dependencies, throw error if disabled.
-set(SEAL_BUILD_DEPS_OPTION_STR "Automatically downloand and build unmet dependencies")
+set(SEAL_BUILD_DEPS_OPTION_STR "Automatically download and build unmet dependencies")
 option(SEAL_BUILD_DEPS ${SEAL_BUILD_DEPS_OPTION_STR} ON)
 
 if(SEAL_BUILD_DEPS)
     include(FetchContent)
-    set(FETCHCONTENT_BASE_DIR ${SEAL_THIRDPARTY_DIR} CACHE STRING "" FORCE)
     mark_as_advanced(FETCHCONTENT_BASE_DIR)
     mark_as_advanced(FETCHCONTENT_FULLY_DISCONNECTED)
     mark_as_advanced(FETCHCONTENT_UPDATES_DISCONNECTED)
@@ -131,7 +130,7 @@ option(SEAL_USE_MSGSL ${SEAL_USE_MSGSL_OPTION_STR} ON)
 if(SEAL_USE_MSGSL)
     if(SEAL_BUILD_DEPS)
         message(STATUS "Microsoft GSL: download ...")
-        include(ExternalMSGSL)
+        fetch_thirdparty_content(ExternalMSGSL)
     else()
         find_package(Microsoft.GSL 3 CONFIG)
         if(NOT Microsoft.GSL_FOUND)
@@ -148,7 +147,7 @@ option(SEAL_USE_ZLIB ${SEAL_USE_ZLIB_OPTION_STR} ON)
 if(SEAL_USE_ZLIB)
     if(SEAL_BUILD_DEPS)
         message(STATUS "ZLIB: download ...")
-        include(ExternalZLIB)
+        fetch_thirdparty_content(ExternalZLIB)
         set(zlib "zlibstatic")
     else()
         find_package(ZLIB 1.2.11)
@@ -167,7 +166,7 @@ option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
 if(SEAL_USE_ZSTD)
     if(SEAL_BUILD_DEPS)
         message(STATUS "Zstandard: download ...")
-        include(ExternalZSTD)
+        fetch_thirdparty_content(ExternalZSTD)
         set(zstd_static "libzstd_static")
     else()
         find_package(zstd CONFIG)
