--- a/native/tests/CMakeLists.txt
+++ b/native/tests/CMakeLists.txt
@@ -30,13 +30,13 @@ if(SEAL_BUILD_TESTS)
         message(STATUS ${CMAKE_MODULE_PATH})
         set(SEAL_THIRDPARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/../../thirdparty)
         include(FetchContent)
-        set(FETCHCONTENT_BASE_DIR ${SEAL_THIRDPARTY_DIR} CACHE STRING "" FORCE)
+        include(SEALMacros)
         mark_as_advanced(FETCHCONTENT_BASE_DIR)
         mark_as_advanced(FETCHCONTENT_FULLY_DISCONNECTED)
         mark_as_advanced(FETCHCONTENT_UPDATES_DISCONNECTED)
         mark_as_advanced(FETCHCONTENT_QUIET)
         message(STATUS "GoogleTest: download ...")
-        include(ExternalGTest)
+        seal_fetch_thirdparty_content(ExternalGTest)
         add_library(GTest::gtest ALIAS gtest)
     else()
         find_package(GTest 1.10.0 CONFIG)
