--- a/native/tests/CMakeLists.txt
+++ b/native/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 3.12)
 
 project(SEALTest VERSION 3.6.0 LANGUAGES CXX C)
 
+set(THIRDPARTY_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR})
+
 # If not called from root CMakeLists.txt
 if(NOT DEFINED SEAL_BUILD_TESTS)
     set(SEAL_BUILD_TESTS ON)
@@ -27,16 +29,9 @@ endif()
 if(SEAL_BUILD_TESTS)
     if(SEAL_BUILD_DEPS)
         list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../../cmake)
-        message(STATUS ${CMAKE_MODULE_PATH})
         set(SEAL_THIRDPARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/../../thirdparty)
-        include(FetchContent)
-        set(FETCHCONTENT_BASE_DIR ${SEAL_THIRDPARTY_DIR} CACHE STRING "" FORCE)
-        mark_as_advanced(FETCHCONTENT_BASE_DIR)
-        mark_as_advanced(FETCHCONTENT_FULLY_DISCONNECTED)
-        mark_as_advanced(FETCHCONTENT_UPDATES_DISCONNECTED)
-        mark_as_advanced(FETCHCONTENT_QUIET)
-        message(STATUS "GoogleTest: download ...")
-        include(ExternalGTest)
+        set(GTEST_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/../../thirdparty)
+        seal_fetch_thirdparty_content(ExternalGTest)
         add_library(GTest::gtest ALIAS gtest)
     else()
         find_package(GTest 1.10.0 CONFIG)
