Added cmake error when only libzstd_shared is available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,16 +171,21 @@ if(SEAL_USE_ZSTD)
         find_package(zstd CONFIG)
         if(NOT zstd_FOUND)
             message(FATAL_ERROR "Zstandard: not found")
-        endif()
-        if(TARGET zstd::libzstd_static)
-            set(zstd_static "zstd::libzstd_static")
-        elseif(TARGET libzstd)
-            get_target_property(libzstd_type libzstd TYPE)
-            if(libzstd_type STREQUAL "STATIC_LIBRARY")
-                set(zstd_static "libzstd")
-                message(STATUS "Zstandard: found")
-            else()
+        else()
+            if(TARGET zstd::libzstd_static)
+                set(zstd_static "zstd::libzstd_static")
+            elseif(TARGET libzstd)
+                get_target_property(libzstd_type libzstd TYPE)
+                if(libzstd_type STREQUAL "STATIC_LIBRARY")
+                    set(zstd_static "libzstd")
+                    message(STATUS "Zstandard: found")
+                else()
+                    message(FATAL_ERROR "Zstandard: must be static")
+                endif()
+            elseif(TARGET zstd::libzstd_shared)
                 message(FATAL_ERROR "Zstandard: must be static")
+            else()
+                message(FATAL_ERROR "Zstandard: not found")
             endif()
         endif()
     endif()
