--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ dotnet/tests/SEALNetTest.csproj
 !dotnet/examples/SEALNetExamples.csproj.in
 dotnet/examples/SEALNetExamples.csproj
 CMakeSettings.json
+.vscode
 
 # Build
 bin/
