Added SEAL benchmark for KeyGen, BFV, and CKKS that is based on google benchmark.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ dotnet/tests/SEALNetTest.csproj
 dotnet/examples/SEALNetExamples.csproj
 dotnet/nuget/SEALNet.targets
 CMakeSettings.json
+.vscode
 
 # Build
 bin/
