--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -23,9 +23,9 @@
   </metadata>
   <files>
     <file src="SEALNet.targets" target="build/Microsoft.Research.SEALNet.targets" />
-    <file src="@SEAL_WINDOWS_SEAL_C_PATH@" target="runtimes/win10-x64" />
-    <file src="@SEAL_LINUX_SEAL_C_PATH@" target="runtimes/linux-x64" />
-    <file src="@SEAL_MACOS_SEAL_C_PATH@" target="runtimes/macos-x64" />
+    <file src="@NUGET_WINDOWS_SEAL_C_PATH@" target="runtimes/win10-x64" />
+    <file src="@NUGET_LINUX_SEAL_C_PATH@" target="runtimes/linux-x64" />
+    <file src="@NUGET_MACOS_SEAL_C_PATH@" target="runtimes/macos-x64" />
     <file src="../../build/bin/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
     <file src="../../build/bin/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
     <file src="../../LICENSE" target="LICENSE" />
